[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/game/card/PileStart.gd" type="Script" id=1]
[ext_resource path="res://assets/Cards/cardBack_blue1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.5821, 94.5341 )

[node name="PileStart" type="Position2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
texture = ExtResource( 2 )

[node name="ClickArea" type="Area2D" parent="."]

[node name="Full" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 1 )
disabled = true

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_Area2D_mouse_exited"]
